# umbra

./: .gitignore  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  NEXTSTEPS.md  README.md  REPO_MAP.md  RULES.md  SECURITY.md  integration-test-0001.sh  verify-0001.sh
.github/workflows/: ci.yml
archive/mesh/: README.md  mesh_phases.md
docs/adr/: 0000-template.md  0001-v0-stack-go-nextjs.md  0002-multi-tenancy-shared-db.md  0004-deploy-model-customer-only-migrate-to-hybrid.md  0005-policy-evaluator-interface.md  0006-redis-streams-events.md  0007-service-to-service-auth-identity.md  0008-pep-integration-pattern.md  0009-identity-provider-claims-model.md  0010-typed-api-contracts-and-e2e.md  0011-optional-rust-pep-compose-profile.md  0012-minimal-dev-stack-target.md  0013-receipt-signing-strict-ingest-security-exception.md  README.md
docs/archive/planning/: README.md  demo-readiness-two-week-plan.md  receipt-signing-hardening-plan.md  tickets.md
identity/: README.md  identity_phases.md
identity/control-plane/: .gitignore  Makefile  README.md  go.mod  go.sum  go.work  go.work.sum
identity/control-plane/services/pep-rust/: Cargo.toml  Dockerfile  README.md
identity/control-plane/services/pep-rust/src/: main.rs
mesh/: mesh_phases.md
setup/: README.md
tickets/0001/: IMPLEMENTATION-0001.md  UMBRA-0001-README.md
tickets/0002/: 0002_deterministic_local_demo.md  IMPLEMENTATION-0002.md  UMBRA-0002-README.md  integration-test-0002.sh
tickets/0003/: IMPLEMENTATION-0003.md  SUMMARY-0003.md  UMBRA-0003-README.md  integration-test-0003.sh  verify-0003.sh
(+184 files in other folders)
