[package]
name = "pep-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
bytes = "1.7.1"
chrono = { version = "0.4.38", default-features = false, features = ["std", "clock"] }
reqwest = { version = "0.12.7", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4.13", features = ["limit"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }

[dev-dependencies]
http-body-util = "0.1.2"
